# tulip-browser

./: README.md
src/: index.html  main.js  settings.html  settings.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json5
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs  menu.rs  setting.rs  thread.rs
src-tauri/src/thread/: responses.rs  threads.rs
